--- a/src/styles.css
+++ b/src/styles.css
@@ -11,10 +11,8 @@ body {
 	--red: #fe0222;
 	--orange: #fd7702;
 	--yellow: #ffbb00;
-
 	--background: var(--white);
 	--accent: #5f5f5f;
-
 	margin: 0;
 	padding: 0;
 	background-color: var(--background);
@@ -22,25 +20,9 @@ body {
 }
 
 * {
-	/* font-family: sofia-pro, sans-serif; */
 	font-weight: 400;
 	font-style: normal;
 	-webkit-font-smoothing: antialiased;
-}
-
-::-webkit-scrollbar {
-	height: 5px;
-	width: 5px;
-	background: var(--background);
-}
-
-::-webkit-scrollbar-thumb {
-	background: var(--accent);
-	-webkit-border-radius: 1ex;
-}
-
-::-webkit-scrollbar-corner {
-	background: var(--background);
 }
 
 html {
@@ -63,80 +45,38 @@ a {
 	text-decoration: none;
 	color: black;
 }
+
 a img {
 	border: 0;
 	outline: 0;
 }
 
-.card-list {
-	display: flex;
+@media only screen and (max-width: 479px) {
+	body {
+		font-size: 5px;
+	}
 }
 
-.card {
-	width: 65rem;
-	height: 80vh;
-	margin-right: 5rem;
-	box-shadow: 4px 8px 40px rgba(0, 0, 0, 0.3);
-	border-radius: 20px;
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+	body {
+		font-size: 6px;
+	}
 }
 
-.card:last-of-type {
-	margin-right: 0;
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+	body {
+		font-size: 8px;
+	}
 }
 
-.card-content {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
-	position: relative;
-	overflow: hidden;
+@media only screen and (min-width: 1024px) and (max-width: 1279px) {
+	body {
+		font-size: 10px;
+	}
 }
 
-.card-image-container {
-	overflow: hidden;
-	background-color: #000;
-	border-radius: 20px;
-	width: 100%;
-	height: 100%;
-}
-
-.card-image {
-	cursor: pointer;
-	height: 100%;
-}
-
-.title-container {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	text-align: center;
-	width: 100%;
-	height: auto;
-	padding: 2rem;
-	min-height: 120px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	overflow: hidden;
-	word-break: keep-all;
-	backdrop-filter: blur(5px);
-	-webkit-backdrop-filter: blur(5px);
-	background-color: rgba(0, 0, 0, 0.3);
-	border-bottom-left-radius: 20px;
-	border-bottom-right-radius: 20px;
-	box-sizing: border-box;
-}
-
-.category {
-	font-weight: 700;
-	color: #fff;
-	font-size: 1.5rem;
-}
-
-.title-container > h2 {
-	font-weight: 700;
-	color: #fff;
-	font-size: 2.25rem;
+@media only screen and (min-width: 1280px) {
+	body {
+		font-size: 12px;
+	}
 }
